fix(employee-endpoints): Названия методов и endpoints по общепринятым стандартам
- Изменены имена методов классов, связанных с обработкой employee-endpoints: EmployeeAPI, EmployeeController, EmployeeService, EmployeeControllerTests
- Изменен url списка сотрудников: /employee/all -> /employees
- Изменена спецификация openapi в соответствии с новым url, именами методов (замена id в спецификации) и описано тело 200 ответа для get /employee/{id}
